# oite

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  PROGRESS.md  README.md  build.rs  test_try_catch.ot
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bootstrap/: emitter.tscl  lexer.tscl  main.tscl  parser.tscl  test_bootstrap.tscl  types.tscl  utils.tscl
compiler/: main.ot  main.tscl  pipeline.ot  pipeline.tscl  test_minimal.tscl  test_operators.tscl  test_pipeline.tscl
compiler/ast/: mod.ot  types.ot
compiler/codegen/: emitter.ot  emitter.tscl  mod.ot  mod.tscl
compiler/ir/: builder.ot  builder.tscl  mod.ot  mod.tscl
compiler/lexer/: error.ot  mod.ot  mod.tscl  token.ot  token.tscl
compiler/parser/: error.ot  expr.ot  expr.tscl  mod.ot  mod.tscl  stmt.ot  stmt.tscl
compiler/passes/: borrow_ck.ot  borrow_ck.tscl  lifetime_constraints.ot  (+8 more)
docs/: .mintignore  README.md  contributing.mdx  development-status.mdx  docs.json  docusaurus.config.ts  getting-started.mdx  home.mdx  javascript-interop.mdx  lifetimes.mdx  package-lock.json  package.json  sidebars.ts  sidebarsCompiler.ts  sidebarsRolls.ts  sidebarsUnroll.ts  style.css
examples/: file_reader.tscl  http_server_fast.rs  http_server_multicore.rs  http_server_optimized.rs  http_server_reuseport.rs  https_server.rs  simple_fib.tscl  test_fib.tscl
scripts/: bootstrap_verify.sh
src/: lib.rs  main.rs  tests.rs
std/: prelude.tscl
tests/: debug_lexer.tscl  decorators.tscl  field-init-debug.tscl  lexer_debug2.tscl  lexer_debug3.tscl  lexer_debug4.tscl  lexer_debug5.tscl  lexer_debug6.tscl
(+142 files in other folders)
